@@ -12,33 +12,14 @@ function L = superop(H, D, baths)
 %
 %  B can also be a cell vector of baths, in which case D has to be
 %  a cell vector of the corresponding interaction operators.
+%  The baths are assumed independent and uncorrelated,
+%  i.e. \Gamma_{ab} = \delta_{ab} * \Gamma_{a}.
 
 % Ville Bergholm 2009-2017
 
 
-if ~iscell(baths)
-  baths = {baths}; % needs to be a cell array, even if it has just one element
-end
-n_baths = length(baths); % number of baths
-
-% make sure the baths have the same TU!
-temp = baths{1}.TU;
-for k=2:n_baths
-  if baths{k}.TU ~= temp
-    error('All the baths must have the same time unit!')
-  end
-end
-
-% jump ops
-[dH, X] = rotating_frame(H, D);
-
-% tolerance for final transition frequency differences
-tol_dH_warn = 1e-3;
-for k=2:length(dH)
-    if abs(dH(k)-dH(k-1)) < tol_dH_warn
-        fprintf('Warning: The small difference between dH(%d) and dH(%d) may break the RWA.\n', k-1, k);
-    end
-end
+[dH, X, Gamma] = markov.components(H, D, baths);
+n_baths = size(X,2);
 
 iH_LS = 0;
 acomm = 0;
@@ -46,15 +27,15 @@ diss = 0;
 
 for n=1:n_baths
   A = X(:,n); % ops for the n'th bath
-  b = baths{n};
 
   % we build the Liouvillian in a funny order to be a bit more efficient
   for k=1:length(dH)
     % first the positive energy shift
-    [g, s] = b.corr(dH(k));
+    G = Gamma(n, k, 1);
+    g = 2*real(G);
     temp = A{k}' * A{k};
 
-    iH_LS = iH_LS +1i * s * temp;
+    iH_LS = iH_LS +1i * imag(G) * temp;
     acomm = acomm -0.5 * g * temp;
     diss = diss +lrmul(g * A{k}, A{k}');
 
@@ -64,10 +45,11 @@ for n=1:n_baths
     end
 
     % now the corresponding negative energy shift
-    [g, s] = b.corr(-dH(k));
+    G = Gamma(n, k, 2);
+    g = 2*real(G);
     temp = A{k} * A{k}'; % note the difference here, A(-omega) = A'(omega)
 
-    iH_LS = iH_LS +1i * s * temp;
+    iH_LS = iH_LS +1i * imag(G) * temp;
     acomm = acomm -0.5 * g * temp;
     diss = diss +lrmul(g * A{k}', A{k}); % here too
   end
