@@ -211,6 +211,7 @@ b bugfix
               + markov/bath.plot_correlation
               + markov/bath.plot_LUT
               + markov/bath.plot_cutoff
+              + markov/components
               * hamiltonian/jaynes_cummings:  allow multiple modes as well as multiple atoms.
               + utils/cm_phase
               + utils/R_SO3
